moonlight-rewrite/test/fixtures/CompileFail/FactDerivationIndexConstructor.hs
module FactDerivationIndexConstructor where

import Moonlight.Rewrite.System (FactDerivationIndex (..))

forgedFactDerivationIndex :: FactDerivationIndex
forgedFactDerivationIndex = FactDerivationIndex mempty
